TRUNK-6686: Restore relevance weighting in patient search lost in the Hibernate Search 6 migration